--- a/.github/workflows/staging-frontend.yml
+++ b/.github/workflows/staging-frontend.yml
@@ -3,39 +3,45 @@ name: Release staging frontend
 on:
   push:
     branches: 
-      - trunk
+      - main
     paths:
       - 'frontend/**'
       - '.github/workflows/staging-frontend.yml'
 
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push staging
-        uses: docker/build-push-action@v2
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build image
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
         with:
+          image: grappa-frontend
+          tags: staging ${{ github.sha }}
           context: frontend
-          push: true
-          tags: toska/front-grappa2:staging
+          containerfiles: |
+            frontend/Dockerfile
           build-args: |
             NODE_ENV=staging
             BASE_PATH=/staging/
             GIT_SHA=${{ github.sha }}
 
+      - name: Push to quay.io
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
+          registry: quay.io/toska
+          username: toska+github
+          password: ${{ secrets.QUAY_IO_TOKEN }}
+
   sentry-release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-and-push
 
     steps:
       - uses: actions/checkout@v2
