--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,34 +6,58 @@ on:
       - published
 
 jobs:
-  build:
+  release-frontend:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: actions/checkout@v3
 
-      - name: Build and push frontend to production
-        uses: docker/build-push-action@v2
+      - name: Build image
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
         with:
+          image: grappa-frontend
+          tags: production ${{ github.sha }}
           context: frontend
-          push: true
-          tags: toska/front-grappa2:latest
+          containerfiles: |
+            frontend/Dockerfile
           build-args: |
             BASE_PATH=/v2/
             GIT_SHA=${{ github.sha }}
 
-      - name: Build and push backend to production
-        uses: docker/build-push-action@v2
+      - name: Push to quay.io
+        uses: redhat-actions/push-to-registry@v2
         with:
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
+          registry: quay.io/toska
+          username: toska+github
+          password: ${{ secrets.QUAY_IO_TOKEN }}
+
+  release-backend:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build image
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
+        with:
+          image: grappa-backend
+          tags: production ${{ github.sha }}
           context: backend
-          push: true
-          tags: toska/back-grappa2:latest
+          containerfiles: |
+            backend/Dockerfile
           build-args: |
             BASE_PATH=/v2/
             GIT_SHA=${{ github.sha }}
+
+      - name: Push to quay.io
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
+          registry: quay.io/toska
+          username: toska+github
+          password: ${{ secrets.QUAY_IO_TOKEN }}
